--- a/feedek/FeedEk.css
+++ b/feedek/FeedEk.css
@@ -1,6 +1,24 @@
-.feedEkList{width:450px; list-style:none outside none;background-color:#FFFFFF; border:1px solid #D3CAD7; padding:4px 6px; color:#3E3E3E;}
-.feedEkList li{border-bottom:1px solid #D3CAD7; padding:5px;}
-.feedEkList li:last-child{border-bottom:none;}
-.itemTitle a{font-weight:bold; color:#4EBAFF !important; text-decoration:none }
-.itemTitle a:hover{ text-decoration:underline }
-.itemDate{font-size:11px;color:#AAAAAA;} 
+.feedEkList{
+	width:1;
+	list-style:none outside none;
+	background-color:#FFFFFF;
+	padding:4px 6px;
+	text-indent: 4em;
+	color:#3E3E3E;}
+
+.feedEkList li{
+	padding:5px;}
+	
+.feedEkList li:last-child{
+	border-bottom:none;}
+	
+.itemTitle a{font-weight:bold;
+	color:#505050 !important;
+	text-decoration:none;}
+	
+.itemTitle a:hover{
+	text-decoration:underline;}
+	
+.itemDate{
+	font-size:11px;
+	color:#AAAAAA;} 
