--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -3,7 +3,7 @@
 	list-style:none outside none;
 	background-color:#FFFFFF;
 	padding:4px 6px;
-	text-indent: 11px;
+	margin-left: 11px;
 	color:#3E3E3E;}
 
 .feedEkList li{
@@ -24,22 +24,23 @@
 body {
 	background-color: rgb(255, 255, 255);
 	font-family: calibri;
+	text-align: justify;
 	color: rgb(70, 70, 70);}
 	
 h1 {
 	color: rgb(90, 90, 90);
-	text-indent: 5px}
+	margin-left: 5px}
 	
 h2 {
 	color: rgb(110, 110, 110);
-	text-indent: 7px;}
+	margin-left: 7px;}
 	
 h3 {
 	color: rgb(130, 130, 130);
-	text-indent: 9px;}
+	margin-left: 9px;}
 	
 p {
-	text-indent: 11px;}
+	margin-left: 11px;}
 	
 a {
   	text-decoration: none;}
@@ -60,11 +61,10 @@ table, tr, td {
 	padding: 0px;
 	height: 100%;
 	width: 100%;
-	text-align: left;
 	vertical-align: top;}
 
 #navPane {
-	width: 350px;}
+	width: 400px;}
 
 #contentPane {
-	width: 550px;}
+	width: 500px;}
