--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -1,5 +1,5 @@
 .feedEkList{
-	width:1;
+	width:500px;
 	list-style:none outside none;
 	background-color:#FFFFFF;
 	padding:4px 6px;
@@ -49,13 +49,17 @@ img.icon {
 	height: 25px;
 	width: 25px;}
 	
-#viewBlog, #viewAcad {
+#viewBlog,
+#viewAcad,
+#viewTwtr,
+#viewYtbe {
 	display: none;}
 
 #content {
 	font-size: 14px;
 	text-intent: 11px;
 	list-style-type: square;}
+	
 table, tr, td {
 	border: 1px;
 	padding: 0px;
@@ -64,7 +68,7 @@ table, tr, td {
 	vertical-align: top;}
 
 #navPane {
-	width: 400px;}
+	width: 300px;}
 
 #contentPane {
-	width: 500px;}
+	width: 550px;}
