--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -42,7 +42,7 @@ a {
 	width: 750px;
 	padding:4px 6px;
 	margin-left: 11px;
-	color:#3E3E3E;}
+	color: rgb(255, 255, 255);}
 
 .feedEkList li{
 	padding:4px;}
