--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -1,6 +1,6 @@
 body {
 	font-family: calibri;
-	text-align: justify;
+	text-align: left;
     margin-top: 0px;
     margin-bottom: 0px;
     margin-right: 0px;
