--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -2,7 +2,8 @@ html {
 	font-family: calibri;
 	text-align: left;
     vertical-align: top;
-	text-decoration:none;
+	text-decoration: none;
+	font-size: 14px;
 }
 
 body {
@@ -16,7 +17,7 @@ table {
 	border-collapse: collapsed;
 	padding: 0px;
 	height: 100%;
-	width: 100%;
+	width: 800px;
 }
 	
 h1 {
@@ -26,72 +27,86 @@ h1 {
 	
 h2 {
 	color: rgb(120, 120, 120);
-	margin-left: 7px;}
+	margin-left: 10px;
+}
 	
 h3 {
 	color: rgb(130, 130, 130);
-	margin-left: 9px;}
+	margin-left: 15px;
+}
 	
 p {
-	margin-left: 11px;
-	font-size: 14px;
-	font-weight: normal;}
+	margin-left: 20px;
+
+	font-weight: normal;
+	padding: 5px;
+}
 	
 a {
-  	text-decoration: none;}
+  	text-decoration: none;
+}
 
-.feedEkList{
-	list-style:none outside none;
-	padding:5px 5px;
-	margin-left: 11px;
-	color: rgb(255, 255, 255);}
+.feedEkList {
+	list-style: none outside none;
+	padding: 5px 5px;
+	margin-left: 15px;
+	color: rgb(255, 255, 255);
+}
 
-.feedEkList li{
-	padding:5px;}
+.feedEkList li {
+	padding: 5px;
+}
 	
-.itemTitle a{
+.itemTitle a {
 	font-weight: normal;
-	color: rgb(220, 220, 220) !important;
-	text-decoration:none;}
+	color: rgb(25, 25, 25) !important;
+	text-decoration: none;
+}
 	
-.itemTitle a:hover{
-	text-decoration:underline;}
+.itemTitle a: hover{
+	text-decoration: underline;
+}
 	
 .itemDate{
-	font-size: 11px;
-	color: rgb(180, 180, 180);}
+	font-size: 12px;
+	color: rgb(35, 35, 35);
+}
 
 img.icon {
 	height: 25px;
-	width: 25px;}
+	width: 25px;
+}
 
 #bgImg {
 	position: fixed;
 	width: 2580px;
 	height: 2048px;
-	opacity: 0.20;}
+	opacity: 0.20;
+}
 
 #viewBlog,
 #viewAcad,
 #viewTwtr,
 #viewYtbe {
-	display: none;}
+	display: none;
+}
 		
 #selectorPane {
 	position: fixed;
 	left: 0px;
-	width: 350px;
-	vertical-align: top;}
+	width: 300px;
+	vertical-align: top;
+}
 
 #contentPane {
-	background-color: rgb(10, 10, 10);
-	opacity: .9;
 	position: relative;
-	color: rgb(220, 220, 220);
-	width: 600px;
+	color: rgb(90, 90, 90);
+	left: 310px;
 	height: 100%;
-	vertical-align: top;}
+	vertical-align: top;
+	horizontal-align: left;
+}
 
 #contentList li {
-	font-size: 14px;
-	display: inline;}
+	display: inline;
+}
