--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -1,112 +1,97 @@
 html {
-	font-family: calibri;
-	text-align: left;
+    font-family: calibri;
+    text-align: left;
+    text-decoration: none;
     vertical-align: top;
-	text-decoration: none;
-	font-size: 14px;
+    font-size: 14px;
 }
-
 body {
-    margin-top: 0px;
     margin-bottom: 0px;
-    margin-right: 0px;
     margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
 }
-
 table {
-	border-collapse: collapsed;
-	padding: 0px;
-	height: 100%;
-	width: 800px;
+    border-collapse: collapsed;
+    height: 100%;
+    width: 800px;
 }
-	
 h1 {
-	color: rgb(100, 100, 100);
-	margin-left: 5px
+    color: rgb(100, 100, 100);
+    margin-left: 5px
 }
-	
 h2 {
-	color: rgb(120, 120, 120);
-	margin-left: 10px;
+    color: rgb(120, 120, 120);
+    margin-left: 10px;
 }
-	
 h3 {
-	color: rgb(130, 130, 130);
-	margin-left: 15px;
+    color: rgb(130, 130, 130);
+    margin-left: 15px;
 }
-	
+
+h4 {
+    color: rgb(140, 140, 140);
+    margin-left: 20px;
+}
 p {
-	margin-left: 20px;
-
-	font-weight: normal;
-	padding: 5px;
+    font-weight: normal;
+    list-style: none outside none;
+    margin-left: 15px;
+    padding: 5px 5px;
 }
-	
 a {
-  	text-decoration: none;
+    text-decoration: none;
 }
-
 .feedEkList {
-	list-style: none outside none;
-	padding: 5px 5px;
-	margin-left: 15px;
-	color: rgb(255, 255, 255);
+    list-style: none outside none;
+    margin-left: 15px;
+    padding: 5px;
 }
-
 .feedEkList li {
-	padding: 5px;
+    padding: 5px;
 }
-	
 .itemTitle a {
-	font-weight: normal;
-	color: rgb(25, 25, 25) !important;
-	text-decoration: none;
+    color: rgb(25, 25, 25) !important;
+    font-weight: normal;
+    text-decoration: none;
 }
-	
-.itemTitle a: hover{
-	text-decoration: underline;
+.itemTitle a: hover {
+    text-decoration: underline;
 }
-	
-.itemDate{
-	font-size: 12px;
-	color: rgb(35, 35, 35);
+.itemDate {
+    color: rgb(50, 50, 50);
+    font-size: 12px;
 }
-
 img.icon {
-	height: 25px;
-	width: 25px;
+    height: 25px;
+    width: 25px;
 }
-
 #bgImg {
-	position: fixed;
-	width: 2580px;
-	height: 2048px;
-	opacity: 0.20;
+    height: 2048px;
+    opacity: 0.20;
+    position: fixed;
+    width: 2580px;
 }
-
-#viewBlog,
+#selectorPane {
+    left: 0px;
+    position: fixed;
+    vertical-align: top;
+    width: 300px;
+}
+#contentPane {
+    color: rgb(90, 90, 90);
+    height: 100%;
+    horizontal-align: left;
+    left: 310px;
+    position: relative;
+    vertical-align: top;
+}
+#contentList li {
+    display: inline;
+}
 #viewAcad,
+#viewBlog,
 #viewTwtr,
 #viewYtbe {
-	display: none;
-}
-		
-#selectorPane {
-	position: fixed;
-	left: 0px;
-	width: 300px;
-	vertical-align: top;
-}
-
-#contentPane {
-	position: relative;
-	color: rgb(90, 90, 90);
-	left: 310px;
-	height: 100%;
-	vertical-align: top;
-	horizontal-align: left;
-}
-
-#contentList li {
-	display: inline;
+    display: none;
 }
