--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -12,9 +12,10 @@ body {
     margin-top: 0px;
 }
 table {
+	position: relative;
     border-collapse: collapsed;
     height: 100%;
-    width: 800px;
+    width: 900px;
 }
 h1 {
     color: rgb(90, 90, 90);
@@ -45,6 +46,7 @@ a {
 .feedEkList {
     list-style: none outside none;
     margin-left: 15px;
+    width: 450px;
     padding: 5px;
 }
 .feedEkList li {
@@ -73,17 +75,14 @@ img.icon {
     height: 400px;
 }
 #selectorPane {
-    left: 0px;
-    position: fixed;
     vertical-align: top;
     width: 300px;
 }
 #contentPane {
     color: rgb(90, 90, 90);
     height: 100%;
+    width: 500px;
     horizontal-align: left;
-    left: 310px;
-    position: relative;
     vertical-align: top;
 }
 #contentList li {
@@ -94,4 +93,13 @@ img.icon {
 #viewTwtr,
 #viewYtbe {
     display: none;
+}
+
+#loadTable {
+	background-color: rgb(200, 200, 200);
+	font-color: rgb(200, 200, 200);
+	opacity: 1;
+	height: 100%;
+	width: 100%;
+    border-collapse: collapsed;
 }
