--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -1,105 +1,21 @@
-html {
-    font-family: calibri;
-    text-align: left;
-    text-decoration: none;
-    vertical-align: top;
-    font-size: 14px;
-}
-body {
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-}
-table {
-	position: relative;
-    border-collapse: collapsed;
-    height: 100%;
-    width: 900px;
-}
-h1 {
-    color: rgb(90, 90, 90);
-    margin-left: 5px
-}
-h2 {
-    color: rgb(110, 110, 110);
-    margin-left: 10px;
-}
-h3 {
-    color: rgb(120, 120, 120);
-    margin-left: 15px;
-}
-
-h4 {
-    color: rgb(140, 140, 140);
-    margin-left: 20px;
-}
-p {
-    font-weight: normal;
-    list-style: none outside none;
-    margin-left: 15px;
-    padding: 5px 5px;
-}
-a {
-    text-decoration: none;
-}
-.feedEkList {
-    list-style: none outside none;
-    margin-left: 15px;
-    width: 450px;
-    padding: 5px;
-}
-.feedEkList li {
-    padding: 5px;
-}
-.itemTitle a {
-    color: rgb(25, 25, 25) !important;
-    font-weight: normal;
-    text-decoration: none;
-}
-.itemTitle a: hover {
-    text-decoration: underline;
-}
-.itemDate {
-    color: rgb(50, 50, 50);
-    font-size: 12px;
-}
-img.icon {
-    height: 25px;
-    width: 25px;
-}
-#bgImg {
-    opacity: 0.40;
-    position: fixed;
-    width: 600px;
-    height: 400px;
-}
-#selectorPane {
-    vertical-align: top;
-    width: 300px;
-}
-#contentPane {
-    color: rgb(90, 90, 90);
-    height: 100%;
-    width: 500px;
-    horizontal-align: left;
-    vertical-align: top;
-}
-#contentList li {
-    display: inline;
-}
-#viewAcad,
-#viewBlog,
-#viewTwtr,
-#viewYtbe {
-    display: none;
-}
-
-#loadTable, #loadScreen {
-	background-color: rgb(200, 200, 200);
-	font-color: rgb(200, 200, 200);
-	opacity: 1;
-	height: 100%;
-	width: 100%;
-    border-collapse: collapsed;
-}
+html{font-family: calibri; text-align: left; text-decoration: none; vertical-align: top; font-size: 14px;}
+body{margin-bottom: 0px; margin-left: 0px; margin-right: 0px; margin-top: 0px;}
+table{position: relative; border-collapse: collapsed; height: 100%; width: 900px;}
+h1{color: rgb(90, 90, 90); margin-left: 5px}
+h2{color: rgb(110, 110, 110); margin-left: 10px;}
+h3{color: rgb(120, 120, 120); margin-left: 15px;}
+h4{color: rgb(140, 140, 140); margin-left: 20px;}
+p{font-weight: normal; list-style: none outside none; margin-left: 15px; padding: 5px 5px;}
+a{text-decoration: none;}
+.fLst{width:450px; list-style:none outside none; border:0px; padding:4px 6px; color:#3E3E3E;}
+.fLst li{border-bottom:1px solid rgb(210, 210, 210); padding:5px;}
+.fLst li:last-child{border-bottom:none;}
+.fTle a{font-weight:normal; color: rgb(100, 100, 100) !important; text-decoration:none;}
+.fTle a:hover{ text-decoration:underline;}
+.fDte{font-size:11px;color:#AAAAAA;} 
+img.ic{height: 25px; width: 25px;}
+#bgImg{opacity: 0.40; position: fixed; width: 600px; height: 400px;}
+#slPne{vertical-align: top; width: 300px;}
+#ctPne{color: rgb(90, 90, 90); height: 100%; width: 500px; horizontal-align: left; vertical-align: top;}
+#ctLst li{display: inline;}
+#vAcad, #vBlog, #vTwtr{display: none;}
