--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -7,15 +7,14 @@ h3{color: rgb(120, 120, 120); margin-left: 15px;}
 h4{color: rgb(140, 140, 140); margin-left: 20px;}
 p{font-weight: normal; list-style: none outside none; margin-left: 15px; padding: 5px 5px;}
 a{text-decoration: none;}
-.fLst{width:450px; list-style:none outside none; border:0px; padding:4px 6px; color:#3E3E3E;}
-.fLst li{border-bottom:1px solid rgb(210, 210, 210); padding:5px;}
-.fLst li:last-child{border-bottom:none;}
-.fTle a{font-weight:normal; color: rgb(100, 100, 100) !important; text-decoration:none;}
+.fLst{width:450px; list-style:none outside none; border:0px; padding:4px 6px;}
+.fLst li{border-bottom:1px solid rgb(80, 80, 80); padding:5px;}
+.fTle a{font-weight:normal; color: rgb(80, 80, 80) !important; text-decoration:none;}
 .fTle a:hover{ text-decoration:underline;}
-.fDte{font-size:11px;color:#AAAAAA;} 
+.fDte{font-size:11px;rgb(80, 80, 80)} 
 img.ic{height: 25px; width: 25px;}
-#bgImg{opacity: 0.40; position: fixed; width: 600px; height: 400px;}
+#bgImg{opacity: 0.40; position: fixed; width: 2000px; height: 1600px;}
 #slPne{vertical-align: top; width: 300px;}
-#ctPne{color: rgb(90, 90, 90); height: 100%; width: 500px; horizontal-align: left; vertical-align: top;}
+#ctPne{color: rgb(80, 80, 80); height: 100%; width: 500px; horizontal-align: left; vertical-align: top;}
 #ctLst li{display: inline;}
 #vAcad, #vBlog, #vTwtr{display: none;}
