--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -1,20 +1,20 @@
 html{font-family: calibri; text-align: left; text-decoration: none; vertical-align: top; font-size: 14px;}
 body{margin-bottom: 0px; margin-left: 0px; margin-right: 0px; margin-top: 0px;}
-table{position: relative; border-collapse: collapsed; height: 100%; width: 900px;}
-h1{color: rgb(50, 50, 50); margin-left: 5px}
+table{border-spacing: 0px;}
+h1{color: rgb(50, 50, 50); margin-left: 5px;}
 h2{color: rgb(60, 60, 60); margin-left: 10px;}
 h3{color: rgb(70, 70, 70); margin-left: 15px;}
 h4{color: rgb(80, 80, 80); margin-left: 20px;}
 p{font-weight: normal; list-style: none outside none; margin-left: 15px; padding: 5px 5px;}
 a{text-decoration: none;}
-.fLst{width:450px; list-style:none outside none; border:0px; padding:4px 6px;}
-.fLst li{border-bottom:1px solid rgb(80, 80, 80); padding:5px;}
-.fTle a{font-weight: bold; color: rgb(80, 80, 80) !important; text-decoration:none;}
+.fLst{width:90%; list-style:none outside none; border:0px; padding:4px 6px;}
+.fLst li{border-bottom:1px solid rgb(50, 50, 50); padding:5px;}
+.fTle a{font-weight: bold; color:rgb(50, 50, 50) !important; text-decoration:none;}
 .fTle a:hover{ text-decoration:underline;}
-.fDte{font-size:11px;rgb(80, 80, 80)} 
-img.ic{height: 25px; width: 25px;}
-#bgImg{opacity: 0.25; position: fixed; width: 2000px; height: 1600px;}
-#slPne{vertical-align: top; width: 300px;}
-#ctPne{color: rgb(80, 80, 80); height: 100%; width: 500px; horizontal-align: left; vertical-align: top;}
+.fDte {font-size:11px; rgb(50, 50, 50);} 
+img.icon{height: 50px; width: 50px;}
+#selPane{position: fixed; display:table; width:100%; text-align: center; vertical-align: top; background-color: rgb(040, 040, 040); width: 72px;}
+#cntPane{position: relative; left: 80px; text-align: left; vertical-align: top;}
 #ctLst li{display: inline;}
-#vAcad, #vBlog, #vTwtr{display: none;}
+#profilePic{width: 72px; height: 72px;}
+#vAcad, #vBlog {display: none;}
