--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -7,13 +7,13 @@ h3{color: rgb(70, 70, 70); margin-left: 15px;}
 h4{color: rgb(80, 80, 80); margin-left: 20px;}
 p{font-weight: normal; list-style: none outside none; margin-left: 15px; padding: 5px 5px;}
 a{text-decoration: none;}
-.fLst{width:90%; list-style:none outside none; border:0px; padding:4px 6px;}
-.fLst li{border-bottom:1px solid rgb(50, 50, 50); padding:5px;}
-.fTle a{font-weight: bold; color:rgb(50, 50, 50) !important; text-decoration:none;}
-.fTle a:hover{ text-decoration:underline;}
-.fDte {font-size:11px; rgb(50, 50, 50);} 
+.fLst{width: 90%; list-style: none outside none; border: 0px; padding: 4px 6px;}
+.fLst li{border-bottom: 1px solid rgb(50, 50, 50); padding: 5px;}
+.fTle a{font-weight: bold; color: rgb(50, 50, 50) !important; text-decoration: none;}
+.fTle a: hover{ text-decoration: underline;}
+.fDte {font-size: 11px; color: rgb(50, 50, 50);} 
 img.icon{height: 50px; width: 50px;}
-#selPane{position: fixed; display:table; width:100%; text-align: center; vertical-align: top; background-color: rgb(040, 040, 040); width: 72px;}
+#selPane{position: fixed; display: table; width: 100%; text-align: center; vertical-align: top; background-color: rgb(040, 040, 040); width: 72px;}
 #cntPane{position: relative; left: 80px; text-align: left; vertical-align: top;}
 #ctLst li{display: inline;}
 #profilePic{width: 72px; height: 72px;}
