--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -18,3 +18,6 @@ img.icon{height: 50px; width: 50px;}
 #ctLst li{display: inline;}
 #profilePic{width: 72px; height: 72px;}
 #vAcad, #vBlog {display: none;}
+.tooltip {position: relative; display: inline-block;}
+.tooltip .tooltiptext {vertical-align: middle; visibility: hidden; height: 18px; width: 75px; background-color: rgb(50, 50, 50); color: rgb(255, 255, 255); text-align: center; border-radius: 0px; padding: 5px 0; position: absolute; z-index: 2;}
+.tooltip:hover .tooltiptext {visibility: visible;}
