--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -28,6 +28,11 @@ h3{
 h4{
 	margin-left: 20px;
 	}
+h1, h2, h3, h4{
+	margin-top: 0px;
+	margin-bottom: 0px;
+	margin-right: 0px;
+	}
 p{
 	font-weight: normal;
 	list-style: none outside none;
