--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -1,141 +1,119 @@
-html{
-	text-align: left;
+html {
 	text-decoration: none;
 	vertical-align: top;
-	font-size: 14px;
-	}
+	font-size: 12px;
+}
 body {
 	margin-bottom: 0px;
 	margin-left: 0px;
 	margin-right: 0px;
 	margin-top: 0px;
 	font-family: 'Open Sans', sans-serif;
-	}
-table{
+}
+table {
 	border-spacing: 0px;
 	height: 100%;
-	max-width: 640px;
-	}
-h1{
-	margin-left: 5px;
-	}
-h2{
-	margin-left: 10px;
-	}
-h3{
-	margin-left: 15px;
-	}
-h4{
-	margin-left: 20px;
-	}
-h1, h2, h3, h4{
+	width: 100%;
+}
+h1, h2, h3, h4 {
 	margin-top: 0px;
 	margin-bottom: 0px;
 	margin-right: 0px;
-	}
-p{
+}
+p {
 	font-weight: normal;
 	list-style: none outside none;
 	margin-left: 15px;
 	padding: 5px 5px;
-	text-align: left;
-	}
+	text-align: justify;
+}
 
-a{
+a {
 	text-decoration: none;
-	}
-.fLst{
-	width: 640px;
+}
+.fLst {
+	width: 720px;
 	list-style: none outside none;
 	border: 0px;
 	padding: 4px 6px;
-	}
-.fLst li{
+}
+.fLst li {
 	border-bottom: 1px solid rgb(50, 50, 50);
 	padding: 5px;
-	}
-.fTle a{
+}
+.fTle a {
 	font-weight: bold;
 	color: rgb(50, 50, 50) !important;
 	text-decoration: none;
-	}
-.fTle a: hover{
+	width: 720px;
+	word-wrap: break-word;
+}
+.fTle a: hover {
 	text-decoration: underline;
-	}
+}
 .fDte {
 	font-size: 11px;
 	color: rgb(50, 50, 50);
-	}
-img.icon{
-	height: 50px;
-	width: 50px;
-	color: white;
-	mix-blend-mode: screen;
-	}
-#profile{
+}
+img.icon {
+	mix-blend-mode: multiply;
+}
+#profile {
 	height: 150px;
 	width: 150px;
 	float: left;
 	padding: 10px;
 }
-#selPane{
-	background-color: rgb(50, 50, 50);
-	text-align: justify;
-	position: fixed;
-	vertical-align: top;
-	width: 50px;
-	height: 100%;
-	z-index: 1110;
-	}
-#cntPane{
-	position: relative;
-	display: inline-block;
-	left: 55px;
-	text-align: left;
-	vertical-align: top;
-	z-index: 0;
-	}
 
-.vidframes{
+#pageBody {
+	text-align: justify;
+	width: 720px;
+}
+#selPane {
+	text-align: center;
+	width: 100px;
+}
+
+.vidframes {
 	height: 320px;
 	width: 420px;
 }
+
+#header {
+	position: fixed;
+}
+
+
 
 @media screen 
   and (device-width: 360px) 
   and (device-height: 640px)
   and (orientation: portrait) {
-	table{
+	table {
 		border-spacing: 0px;
 		height: 100%;
-		width: 250px;
-		max-width: 250px;
-		}
-	h1{
-		margin-left: 2px;
-		}
-	h2{
-		margin-left: 4px;
-		}
-	h3{
-		margin-left: 6px;
-		}
-	h4{
-		margin-left: 8px;
-		}
-
-	.fLst{
-		width: 260px;
-		}
-	.vidframes{
+	}
+	#pageBody {
+		text-align: justify;
+		width: 320px;
+		max-width: 320px;
+	}
+	img.icon {
+		mix-blend-mode: multiply;
+		width: 36px;
+		height: 36px;
+	}
+	.fLst {
+		width: 320px;
+	}
+	.fTle a {
+		width: 320px;
+	}
+	.vidframes {
 		height: 170px;
-		width: 260px;
-		}
-	#selPane{
-		width: 50px;
-		}
-	#cntPane{
-		width: 260px;
-		}
-
+		width: 320px;
+	}
+	#header {
+		position: fixed;
+	}
 }
