--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -35,12 +35,10 @@ a {
 	width: 720px;
 	list-style: none outside none;
 	border: 0px;
-	padding: 5px 5px;
-	
+	padding: 1px 1px;
 }
 .fLst li {
-	border-bottom: 1px solid rgb(50, 50, 50);
-	padding: 5px;
+	border-bottom: 1px solid rgb(230, 230, 230);
 }
 .fTle a {
 	font-weight: bold;
@@ -58,6 +56,8 @@ a {
 }
 img.icon {
 	mix-blend-mode: multiply;
+	width: 25px;
+	height: 25px;
 }
 #profile {
 	height: 150px;
@@ -70,9 +70,20 @@ img.icon {
 	width: 720px;
 }
 #selPane {
+	font-weight: bold;
 	text-align: center;
 	width: 144px;
+	font-size: 12px;
+	
 }
+#iconTd {
+	text-align: right;
+}
+#textTd {
+	text-align: left;
+	color: rgb(50, 50, 50) !important;
+}
+
 
 .vidframes {
 	height: 320px;
