--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -24,6 +24,7 @@ p {
 	font-weight: normal;
 	list-style: none outside none;
 	margin-left: 15px;
+	margin-right: 15px;
 	padding: 5px 5px;
 	text-align: justify;
 }
@@ -35,10 +36,15 @@ a {
 	width: 720px;
 	list-style: none outside none;
 	border: 0px;
-	padding: 1px 1px;
+	padding: 5px 5px;
+	margin-left: 15px;
+	margin-right: 15px;
 }
 .fLst li {
 	border-bottom: 1px solid rgb(230, 230, 230);
+	padding: 5px 5px;
+	margin-left: 15px;
+	margin-right: 15px;
 }
 .fTle a {
 	color: rgb(50, 50, 50) !important;
