--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -8,7 +8,7 @@ body {
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 0px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans";
     text-align: justify;
 }
 table {
