--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -8,7 +8,7 @@ body {
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 0px;
-    font-family: "Open Sans";
+    font-family: sans;
     text-align: justify;
 }
 table {
@@ -37,6 +37,7 @@ a {
     list-style: none outside none;
     border: 0px;
     padding: 5px 5px;
+    text-align: left;
 
 }
 
