--- a/files/stylesheet.css
+++ b/files/stylesheet.css
@@ -8,7 +8,8 @@ body {
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 0px;
-    font-family: sans;
+    font-family: "Lucida Console", sans-serif;
+    font-size: 14px;
     text-align: justify;
 }
 table {
