--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ ul
 ; float            : left
 ; color            : #000000
 ; background-color : #ffa500
+; box-shadow      : 0px 0px 5px #ffa500
 }
 
 .normal
