--- a/css/style.css
+++ b/css/style.css
@@ -35,24 +35,19 @@ ul
 }
 
 .invert
-{ margin           : 0px 0px 0px 0px
+{ margin           : 0px 10px 0px 0px
 ; padding          : 0px 0px 0px 0px
 ; float            : left
 ; color            : #000000
 ; background-color : #ffa500
-; box-shadow       : 0px 0px 5px #ffa500
 }
 
 .normal
-{ margin  : 0px 0px 0px 0px
-; padding : 0px 0px 0px 0px
-; float   : left
-}
-
-.barbutton
-{ margin  : 0px 0px 0px 0px
-; padding : 0px 10px 0px 0px
-; float   : left
+{ margin           : 0px 10px 0px 0px
+; padding          : 0px 0px 0px 0px
+; float            : left
+; color            : #ffa500
+; background-color : #000000
 }
 
 #inputbox
@@ -65,7 +60,6 @@ ul
 ; outline             : none
 ; font-family         : 'VT323'
 ; font-size           : 20px
-; width               : 75%
 ; height              : 20px
 ; color               : #000000
 ; background          : transparent
