update rss parser, css

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,10 @@ ul
 ; width               : calc(100% - 187px);
 }
 
+#newstable
+{ padding : 0px 10px 0px 0px
+}
+
 #textdiv
 { margin           : 0px 0px 0px 0px
 ; padding          : 0px 0px 0px 0px
