--- a/css/style.css
+++ b/css/style.css
@@ -69,9 +69,8 @@ ul
 
 #newstable
 { padding : 0px 10px 0px 0px
-; width   : auto
+; width   : 100%
 }
-
 #textdiv
 { margin           : 0px 0px 0px 0px
 ; padding          : 0px 0px 0px 0px
