--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ table
 { border-spacing : 0px
 }
 
+tr:hover a
+{ text-decoration: underline
+}
+
 a
 { text-decoration : none
 ; color           : #ffa500
