--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ ul
 ; color               : #ffa500
 ; background          : #000000
 ; text-shadow         : 0px 0px 5px #ffa500
-; width               : calc(100% - 199px);
+; width               : calc(100% - 198px);
 }
 
 #newstable
@@ -92,6 +92,11 @@ ul
 #xmark
 { animation  : blink 1s infinite
 ; color      : #ffa500
+}
+
+#inputlabel
+{ width  : 20px
+; height : 20px
 }
 
 @keyframes blink
