--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,8 @@ table
 }
 
 ::placeholder
-{ color       : #ffa500
-; text-shadow : 0px 0px 5px #ffa500
+{ color       : #803a00
+; text-shadow : 0px 0px 2px #803a00
 }
 
 tr:hover a
