--- a/css/style.css
+++ b/css/style.css
@@ -59,34 +59,21 @@ ul
 }
 
 #inputbox
-{ border-top-style    : hidden
-; border-right-style  : hidden
-; border-left-style   : hidden
-; border-bottom-style : hidden
-; margin              : 3px 0px 3px 0px
-; padding             : 0px 0px 0px 0px
-; outline             : none
-; font-family         : 'VT323'
-; font-size           : 20px
-; height              : 20px
-; color               : #ffa500
-; background          : #000000
-; width               : calc(100% - 130px);
+{ border      : 3px solid #ffa500
+; margin      : 3px 3px 3px 3px
+; padding     : 0px 0px 0px 3px
+; outline     : none
+; font-family : 'VT323'
+; font-size   : 20px
+; height      : 25px
+; color       : #ffa500
+; background  : #000000
+; width       : 100%
 }
 
 #newstable
 { padding : 0px 10px 0px 0px
 ; width   : 100%
-}
-
-#textdiv
-{ margin           : 0px 0px 0px 0px
-; padding          : 0px 0px 0px 0px
-; outline          : none
-; height           : 26px
-; color            : #000000
-; background-color : #ffa500
-; box-shadow       : 0px 0px 1px #ffa500
 }
 
 #vstr
