--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ ul
 ; width       : 100%
 ; color       : #ffa500
 ; background  : #000000
-; position    : relative
+; position    : absolute
 }
 
 .cmdlistitm
