--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ ul
 ; background-color : #ffa500
 }
 
-.normal
+.norma
 { margin           : 3px 5px 3px 5px
 ; padding          : 0px 0px 0px 0px
 ; float            : left
@@ -60,8 +60,8 @@ ul
 
 #inputbox
 { border      : 3px solid #ffa500
-; margin      : 3px 3px 3px 3px
-; padding     : 0px 0px 0px 3px
+; margin      : 0px 0px 0px 0px
+; padding     : 3px 3px 3px 3px
 ; outline     : none
 ; font-family : 'VT323'
 ; font-size   : 20px
@@ -77,8 +77,8 @@ ul
 
 #cmdlist
 { border      : 3px solid #ffa500
-; margin      : 3px 3px 3px 3px
-; padding     : 0px 0px 0px 0px
+; margin      : 0px 0px 0px 0px
+; padding     : 0px 3px 3px 3px
 ; font-family : 'VT323'
 ; font-size   : 20px
 ; color       : #ffa500
@@ -89,7 +89,7 @@ ul
 .cmdlistitm
 { border      : 0px 0px 0px 0px
 ; margin      : 0px 0px 0px 0px
-; padding     : 0px 0px 0px 0px
+; padding     : 0px 3px 0px 3px
 ; font-family : 'VT323'
 ; font-size   : 20px
 ; height      : 22px
