--- a/css/style.css
+++ b/css/style.css
@@ -68,20 +68,29 @@ ul
 ; color       : #ffa500
 ; background  : #000000
 ; position    : absolute
-; width       : 100%
 }
 
 .cmdlistitm
 { border      : 0px 0px 0px 0px
 ; margin      : 0px 0px 0px 0px
-; padding     : 0px 2px 0px 2px
+; padding     : 0px 0px 0px 0px
+; font-family : 'VT323'
+; font-size   : 20px
+; height      : 22px
+; color       : #ffa500
+; background  : #000000
+}
+
+.cmdlisthdr
+{ border      : 0px 0px 0px 0px
+; margin      : 0px 0px 0px 0px
+; padding     : 0px 0px 0px 0px
 ; font-family : 'VT323'
 ; font-size   : 20px
 ; height      : 22px
 ; color       : #000000
 ; background  : #ffa500
 }
-
 #newstable
 { padding : 0px 10px 0px 0px
 ; width   : 100%
