--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,12 @@ body
 ; margin           : 20px 20px 20px 20px
 }
 
+iframe
+{ border  : 0px 0px 0px 0px
+; margin  : 0px 0px 0px 0px
+; padding : 0px 0px 0px 0px
+}
+
 table
 { border-spacing : 0px
 }
