--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,11 @@ ul
 ; margin-bottom : 0
 }
 
+#outtext
+{ overflow : auto
+, width    : 100%
+}
+
 #inputbox
 { border      : 2px solid #ffa500
 ; margin      : 0px 0px 0px 0px
