--- a/css/style.css
+++ b/css/style.css
@@ -64,21 +64,38 @@ ul
 ; height   : calc(100vh - 84px)
 }
 
+#contain
+{ border      : 1px solid #ffa500
+; margin      : 0px 0px 0px 0px
+; padding     : 0px 0px 0px 0px
+; width       : 100%
+; height      : 28px
+}
+
+#menudiv
+{ float      : left
+; padding    : 0px 0px 0px 0px
+; margin     : 0px 0px 0px 0px
+; color      : #000000
+; background : #ffa500
+}
+
 #inputbox
-{ border      : 2px solid #ffa500
+{ border      : 1px solid #000000
 ; margin      : 0px 0px 0px 0px
 ; padding     : 0px 0px 0px 0px
 ; outline     : none
 ; font-family : 'MS PGothic'
 ; font-size   : 20px
-; height      : 22px
+; height      : 20px
 ; width       : 100%
 ; color       : #ffa500
 ; background  : #000000
 }
 
 #textdiv
-{ position : relative
+{ float : left
+; width : calc(100% - 20px)
 }
 
 .cmdlist
