--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,7 @@ html
 }
 
 body
-{ text-shadow      : 0px 0px 5px #ffffff
-; background-color : #13131c
+{ background-color : #13131c
 ; color            : #ffffff
 ; vertical-align   : middle
 ; align-content    : center
