--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ ul
 ; font-family : 'MS PGothic'
 ; font-size   : 20px
 ; height      : 24px
-; color       : #ffffff
+; color       : #ffa500
 ; background  : #13131c
 ; white-space : nowrap
 }
@@ -133,8 +133,8 @@ ul
 ; font-family : 'MS PGothic'
 ; font-size   : 20px
 ; height      : 24px
-; color       : #13131c
-; background  : #ffffff
+; color       : #ffffff
+; background  : #13131c
 ; white-space : nowrap
 }
 
