--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ ul
 ; height      : 20px
 ; width       : 100%
 ; color       : #ffffff
-; background  : #13131c
+; background  : #000000
 }
 
 #textdiv
