--- a/css/style.css
+++ b/css/style.css
@@ -64,11 +64,12 @@ ul
 }
 
 #contain
-{ border      : 2px solid #444480
+{ border      : 1px solid #444480
 ; margin      : 0px 0px 0px 0px
 ; padding     : 0px 0px 0px 0px
 ; width       : 100%
 ; height      : 28px
+; background  : #000000
 }
 
 #menudiv
@@ -103,7 +104,7 @@ ul
 }
 
 .cmdlist
-{ border      : 2px solid #444480
+{ border      : 1px solid #444480
 ; margin      : 0px 0px 0px 0px
 ; padding     : 3px 3px 3px 3px
 ; font-family : 'MS PGothic'
