--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ ul
 { float      : left
 ; padding    : 0px 0px 0px 0px
 ; margin     : 0px 0px 0px 0px
-; color      : #ffffff
+; color      : #ffa500
 ; background : #000000
 ; height     : 28px
 }
@@ -90,7 +90,7 @@ ul
 ; font-size   : 20px
 ; height      : 20px
 ; width       : 100%
-; color       : #ffffff
+; color       : #ffa500
 ; background  : #000000
 }
 
