--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ ul
 { border      : 1px solid #ffa500
 ; margin      : 0px 0px 0px 0px
 ; padding     : 0px 0px 0px 0px
-; width       : 100%
+; width       : calc(100% - 2px)
 ; height      : 28px
 ; background  : #000000
 }
