--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ ul
 }
 
 #contain
-{ border      : 1px solid #444480
+{ border      : 1px solid #ffffff
 ; margin      : 0px 0px 0px 0px
 ; padding     : 0px 0px 0px 0px
 ; width       : 100%
@@ -103,7 +103,7 @@ ul
 }
 
 .cmdlist
-{ border      : 2px solid #444480
+{ border      : 2px solid #323245
 ; margin      : 0px 0px 0px 0px
 ; padding     : 3px 3px 3px 3px
 ; font-family : 'MS PGothic'
@@ -121,7 +121,7 @@ ul
 ; font-family : 'MS PGothic'
 ; font-size   : 20px
 ; height      : 24px
-; color       : #ffa500
+; color       : #ffffff
 ; background  : #13131c
 ; white-space : nowrap
 }
@@ -133,8 +133,8 @@ ul
 ; font-family : 'MS PGothic'
 ; font-size   : 20px
 ; height      : 24px
-; color       : #ffffff
-; background  : #13131c
+; color       : #13131c
+; background  : #ffffff
 ; white-space : nowrap
 }
 
@@ -157,4 +157,3 @@ ul
 {  0% { opacity: 0.0 }
  100% { opacity: 1.0 }
 }
-
