--- a/css/style.css
+++ b/css/style.css
@@ -64,33 +64,49 @@ ul
 }
 
 #contain
-{ border      : 1px solid #ffffff
+{ border      : 1px solid #fa500
 ; margin      : 0px 0px 0px 0px
 ; padding     : 0px 0px 0px 0px
 ; width       : 100%
 ; height      : 28px
 }
 
+#maplist
+{ border  : 1px solid #ffa500
+; margin  : 0px 0px 0px 0px
+; padding : 0px 0px 0px 0px
+; height  : calc(100% - 2px)
+; width   : calc(100% - 30px)
+}
+
+#mapframe
+{ border  : 1px solid #ffa500
+; margin  : 0px 0px 0px 0px
+; padding : 0px 0px 0px 0px
+; height  : calc(100% - 2px)
+; width   : 25px
+}
+
 #menudiv
 { float      : left
 ; padding    : 0px 0px 0px 0px
 ; margin     : 0px 0px 0px 0px
-; color      : #13131c
-; background : #ffffff
+; color      : #ffa500
+; background : #000000
 ; height     : 28px
 }
 
 #inputbox
-{ border      : 1px solid #13131c
+{ border      : 0px 0px 0px 0px
 ; margin      : 0px 0px 0px 0px
 ; padding     : 0px 0px 0px 0px
 ; outline     : none
 ; font-family : 'MS PGothic'
 ; font-size   : 20px
-; height      : 20px
+; height      : 26px
 ; width       : 100%
-; color       : #ffffff
-; background  : #13131c
+; color       : #ffa500
+; background  : #000000
 }
 
 #textdiv
@@ -121,8 +137,8 @@ ul
 ; font-family : 'MS PGothic'
 ; font-size   : 20px
 ; height      : 24px
-; color       : #ffffff
-; background  : #13131c
+; color       : #ffa500
+; background  : #404040
 ; white-space : nowrap
 }
 
@@ -133,8 +149,8 @@ ul
 ; font-family : 'MS PGothic'
 ; font-size   : 20px
 ; height      : 24px
-; color       : #13131c
-; background  : #ffffff
+; color       : #ffffff
+; background  : #404040
 ; white-space : nowrap
 }
 
