--- a/css/style.css
+++ b/css/style.css
@@ -72,11 +72,13 @@ ul
 }
 
 #maplist
-{ border  : 1px solid #ffa500
-; margin  : 0px 0px 0px 0px
-; padding : 0px 0px 0px 0px
-; height  : calc(100% - 2px)
-; width   : 300px
+{ border     : 1px solid #ffa500
+; margin     : 0px 0px 0px 0px
+; padding    : 0px 0px 0px 0px
+; height     : calc(100% - 2px)
+; width      : 300px
+; background : #000000
+; color      : #ffa500
 }
 
 #mapframe
@@ -84,7 +86,7 @@ ul
 ; margin  : 0px 0px 0px 0px
 ; padding : 0px 0px 0px 0px
 ; height  : calc(100% - 2px)
-; width   : calc(100% - 300px)
+; width   : calc(100% - 305px)
 }
 
 #menudiv
