--- a/css/style.css
+++ b/css/style.css
@@ -72,13 +72,15 @@ ul
 }
 
 #maplist
-{ border     : 1px solid #ffa500
-; margin     : 0px 0px 0px 0px
-; padding    : 0px 0px 0px 0px
-; height     : calc(100% - 2px)
-; width      : 300px
-; background : #000000
-; color      : #ffa500
+{ border      : 1px solid #ffa500
+; margin      : 0px 0px 0px 0px
+; padding     : 0px 0px 0px 0px
+; height      : calc(100% - 2px)
+; width       : 300px
+; background  : #000000
+; color       : #ffa500
+; font-family : 'MS PGothic'
+; font-size   : 20px
 }
 
 #mapframe
