--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,7 @@ ul
 }
 
 option
-{ border      : 1px solid #ffa500
-; margin      : 0px 0px 0px 0px
+{ margin      : 0px 0px 0px 0px
 ; padding     : 0px 0px 0px 0px
 ; background  : #000000
 ; color       : #ffa500
