--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,8 @@ ul
 }
 
 select
-{ margin      : 0px 0px 0px 0px
+{ border      : 1px solid #ffa500
+; margin      : 0px 0px 0px 0px
 ; padding     : 0px 0px 0px 0px
 ; background  : #000000
 ; color       : #ffa500
