--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ select
 ; padding     : 0px 0px 0px 0px
 ; background  : #000000
 ; color       : #ffa500
-; font-family : 'MS PGothic'
+; font-family : 'Consolas'
 ; font-size   : 20px
 ; outline     : none
 ; width       : 200px
